# Coder

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.claude  Dockerfile.codex  Dockerfile.gemini  Example.md  Makefile  README.md  README_CN.md  codemate  docker-compose.yml  example.md  pyproject.toml  run-agent.sh  settings.json.example  setup-git-pr.py  start.sh  webhook_server.py
.claude-plugin/: marketplace.json
.claude/rules/: skill-bash-blocks.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  spec.yml  task.yml
.github/workflows/: build-push.yml  docker-build-base.yml  docker-build-pure-claude.yml  docker-build-push.yml  docker-build-webhook.yml  monitor-claude-releases.yml  submodule-update.yml  test.yml
agent/: .env.example  DOCKER_INTEGRATION.md  README.md  __init__.py  claude_agent.py  run-agent.sh
docker/: Dockerfile  Dockerfile.base  Dockerfile.pure-claude  Dockerfile.webhook  tmux.conf
docker/setup/: run.sh  setup-webhook.sh  setup.sh
docs/: migration-plan.md  review-backlog.md  webhook-server.md
hooks/: format-code.py  hooks.json
marketplace/: README.md
marketplace/.claude-plugin/: marketplace.json
plugins/dev/: README.md
plugins/env-keys/: README.md
plugins/git/: README.md
plugins/issue/: README.md
plugins/pm/: README.md
plugins/pr/: README.md
pr/: README.md
pr-plugin/: README.md
pr-plugin/.claude-plugin/: plugin.json
requirements/: operator.txt
setup/: run.sh  setup-skills.py  setup.sh
setup/docker/: Dockerfile.base
skills/: README.md  fix-pr-comments.md
tests/: conftest.py  test_github_auth.py  test_health.py  test_webhook.py
webhook_server/: __init__.py  app.py  config.py  github_auth.py  security.py  services.py
(+91 files in other folders)
