[project]
name = "codemate"
version = "0.1.0"
description = "Docker-based environment for running Claude Code with automated Git/PR setup and Python-controlled agent loop"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.22",
    "loguru>=0.7.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
]

[project.scripts]
agent = "agent.claude_agent:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
