[project]
name = "codemate-webhook"
version = "0.1.0"
description = "GitHub webhook server for CodeMate issue-driven workflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "loguru>=0.7",
    "PyJWT[crypto]>=2.8.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
codemate-webhook = "webhook_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
